--- a/README
+++ b/README
@@ -4,11 +4,11 @@ NAME
 SYNOPSIS
         use Artemis::Reports::DPath 'reports_dpath_search';
         # the first bogomips entry of math sections:
-        @resultlist = reports_dpath_search(
+        @resultlist = reportdata (
                          '{ suite_name => "TestSuite-LmBench" } :: /tap/section/math/*/bogomips[0]'
                       );
         # all report IDs of suite_id 17 that FAILed:
-        @resultlist = reports_dpath_search(
+        @resultlist = reportdata (
                          '{ suite_name => "TestSuite-LmBench" } :: /suite_id[value == 17]/../successgrade[value eq 'FAIL']/../id'
                       );
 
