--- a/README
+++ b/README
@@ -51,10 +51,10 @@ UTILITY FUNCTIONS
     Return cached result for a complete tapper::dpath on all reports.
 
 AUTHOR
-    OSRC SysInt Team, "<osrc-sysint at elbe.amd.com>"
+    AMD OSRC Tapper Team, "<tapper at amd64.org>"
 
 COPYRIGHT & LICENSE
-    Copyright 2008 OSRC SysInt Team, all rights reserved.
+    Copyright 2008-2011 AMD OSRC Tapper Team, all rights reserved.
 
     This program is released under the following license: proprietary
 
