--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
-2008-12-03  Steffen Schwigon  <steffen.schwigon@amd.com>
+2011-03-02  Steffen Schwigon  <steffen.schwigon@amd.com>
 
-	* 0.01
+	* v3.0
 
-	* initial version
+	* first public CPAN release
