--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-03-09 Steffen Schwigon <steffen.schwigon@amd.com>
+
+	* v3.0.3
+
+	* fix dependencies
+
 2011-03-02  Steffen Schwigon  <steffen.schwigon@amd.com>
 
 	* v3.0
