--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-03-30 Steffen Schwigon <steffen.schwigon@amd.com>
+
+	* v3.0.5
+
+	* distro maintenance
+
 2011-03-10 Steffen Schwigon <steffen.schwigon@amd.com>
 
 	* v3.0.4
