--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - explicitely upgrade troublemaker deps
 
 4.0.1     2012-05-16
         - [FEAT] provide testrundb_hostnames to templates
