--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        * PostgreSQL support
+        - [FIX] slow first() usage
 
 4.0.2     2012-06-04
         - explicitely upgrade troublemaker deps
