--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - database merge: TestrunDB+ReportsDB->TestrunDB
+        - performance tweaks
 
 4.1.1     2012-11-20
         - dzil pluginbundle TAPPER
