--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - more explicit dependencies for cpantesters
 
 5.0.1     2016-03-03
         - drop 'exit' and 'wait' due to keyword conflicts in db
