cleanup API functions
There was an alias 'rds' as short alternative
word for 'reports_dpath_search', similar to the
known API function 'reportdata' but it was never
correctly exported nor provided to templates.

Here we drop 'rds' and let 'reportdata' be the
primary API function.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - cleanup reports API
 
 5.0.2     2016-03-30
         - more explicit dependencies for cpantesters
